test_suite/tests/ui/remote/enum_getter.stderr
error: #[serde(getter = "...")] is not allowed in an enum
  --> tests/ui/remote/enum_getter.rs:10:1
   |
10 | / #[serde(remote = "remote::E")]
11 | | pub enum E {
12 | |     A {
13 | |         #[serde(getter = "get_a")]
14 | |         a: u8,
15 | |     },
16 | | }
   | |_^
